// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LegendItem renders correctly 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <Text.Secondary>
    Food : 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    <FormattedNumber
      maximumFractionDigits={1}
      value={60}
    />
     
     kg - 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    60 %
  </Text.Secondary>
</View>
`;

exports[`LegendItem should not render % if percentage is 0 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "justifyContent": "center",
      "paddingTop": 10,
    }
  }
>
  <Text.Secondary>
    Food : 
  </Text.Secondary>
  <Text.Secondary
    lightGray={true}
  >
    <FormattedNumber
      maximumFractionDigits={1}
      value={10}
    />
     
     g
  </Text.Secondary>
</View>
`;
